--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH titoloSezione">Etica</p>
         <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove tecnologie</p>
-        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 10px 0;">
+        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 15px 0;"> //TODO errore qui nel 1px
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Storia</p>
@@ -132,7 +132,7 @@
     <section id="pcto_Page" style="background-color: #EDE8DD; padding-top: calc(45px + 1vw); color: #040405;">
         <p class="osservato fadeInH titoloSezione">PCTO</p>
         <p class="osservato fadeInH sottotitoloSezione">percorsi per le competenze trasversali e l'orientamento</p>
-        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 10px;">
+        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 15px;"> //TODO errore qui nel 1px
             <div id="anniPCTO">
                 <div class="annoPCTO osservato fadeInH">
                     <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Terzo anno</p>
