--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <nav id="menu">
         <ul>
-            <li><a id="home" class="active" onclick="goTo(id)">Home</a></li><!--
-            --><li><a id="educazione_civica" onclick="goTo(id)">Educazione civica</a></li><!--
-            --><li><a id="pcto"  onclick="goTo(id)">Pcto</a><!--
-            --><li><a id="materie"  onclick="goTo(id)">Materie</a>
+            <li><a id="home" class="active" onclick="goTo(id); preventDefault();">Home</a></li><!--
+            --><li><a id="educazione_civica" onclick="goTo(id); preventDefault();">Educazione civica</a></li><!--
+            --><li><a id="pcto"  onclick="goTo(id); preventDefault();">Pcto</a><!--
+            --><li><a id="materie"  onclick="goTo(id); preventDefault();">Materie</a>
             </li>
         </ul>
     </nav>
