navbar ancora buggata
ma non fa più casino con selezione testo

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <nav id="menu">
         <ul>
-            <li><a id="home" class="active" onclick="goTo(id); preventDefault();">Home</a></li><!--
-            --><li><a id="educazione_civica" onclick="goTo(id); preventDefault();">Educazione civica</a></li><!--
-            --><li><a id="pcto"  onclick="goTo(id); preventDefault();">Pcto</a><!--
-            --><li><a id="materie"  onclick="goTo(id); preventDefault();">Materie</a>
+            <li><a id="home" class="active" onclick="goTo(id)">Home</a></li><!--
+            --><li><a id="educazione_civica" onclick="goTo(id)">Educazione civica</a></li><!--
+            --><li><a id="pcto"  onclick="goTo(id)">Pcto</a><!--
+            --><li><a id="materie"  onclick="goTo(id)">Materie</a>
             </li>
         </ul>
     </nav>
@@ -35,7 +35,7 @@
     <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH titoloSezione">Etica</p>
         <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove tecnologie</p>
-        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 15px 0;"> //TODO errore qui nel 1px
+        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 15px 0;"> <!-- TODO problema con il padding 15px errore nel colore navbar -->
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Storia</p>
@@ -132,7 +132,7 @@
     <section id="pcto_Page" style="background-color: #EDE8DD; padding-top: calc(45px + 1vw); color: #040405;">
         <p class="osservato fadeInH titoloSezione">PCTO</p>
         <p class="osservato fadeInH sottotitoloSezione">percorsi per le competenze trasversali e l'orientamento</p>
-        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 15px;"> //TODO errore qui nel 1px
+        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 15px;"> <!-- TODO problema con il padding 15px errore nel colore navbar -->
             <div id="anniPCTO">
                 <div class="annoPCTO osservato fadeInH">
                     <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Terzo anno</p>
