--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Assets/images/LogoMim.ico" type="image/x-icon">
+    
+    <!-- favicon per i vari dispositivi (anche icone sito aggiunto a desktop) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="Assets/images/favicon/site.webmanifest">
+    <link rel="mask-icon" href="Assets/images/favicon/safari-pinned-tab.svg" color="#ede8dd">
+    <meta name="msapplication-TileColor" content="#ede8dd">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="style.css">
     <title>Esame di stato</title>
 </head>
