Risoluzione bug colore navbar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw);">
+    <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw); margin: 0 20px 0 20px;">
         <p class="osservato fadeInH titoloSezione">Etica</p>
         <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove tecnologie</p>
         <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 10px 0;">
@@ -180,7 +180,6 @@
     <section id="materie_Page" style="height: 1000px; padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH titoloSezione">Navigare nell'ignoto</p>
         <p class="osservato fadeInH sottotitoloSezione">l'essere umano e la sua capacità di adattamento</p> <!-- concetto al posto di tema? -->
-
         
     </section>
         
