Piccoli miglioramenti testo e distanze

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a id="home" class="active" onclick="goTo(id)">Home</a></li><!--
             --><li><a id="educazione_civica" onclick="goTo(id)">Educazione civica</a></li><!--
-            --><li><a id="pcto"  onclick="goTo(id)">Pcto</a><!--
+            --><li><a id="pcto" onclick="goTo(id)">Pcto</a><!--
             --><li><a id="materie"  onclick="goTo(id)">Materie</a>
             </li>
         </ul>
@@ -44,7 +44,7 @@
 
     <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw); margin: 0 20px 0 20px;">
         <p class="osservato fadeInH titoloSezione">Etica</p>
-        <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove tecnologie</p>
+        <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove&nbsp;tecnologie</p> <!-- &nbsp; serve a non far andare mai a capo finchè può -->
         <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 10px 0;">
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
@@ -141,20 +141,20 @@
 
     <section id="pcto_Page" style="background-color: #EDE8DD; padding-top: calc(45px + 1vw); color: #040405;">
         <p class="osservato fadeInH titoloSezione">PCTO</p>
-        <p class="osservato fadeInH sottotitoloSezione">percorsi per le competenze trasversali e l'orientamento</p>
+        <p class="osservato fadeInH sottotitoloSezione">percorsi per le competenze trasversali e&nbsp;l'orientamento</p>
         <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 10px;">
             <div id="anniPCTO">
                 <div class="annoPCTO osservato fadeInH">
                     <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Terzo anno</p>
-                    <p>Economia e Marketing: concetti chiave per<br>il successo aziendale.</p>
+                    <p>Economia e Marketing: concetti chiave per&nbsp;il&nbsp;successo&nbsp;aziendale.</p>
                 </div>
                 <div class="annoPCTO osservato fadeInH">
                     <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Quarto anno</p>
-                    <p>Introduzione al mondo universitario:<br>orientamento e FAQ.</p>
+                    <p>Introduzione al mondo&nbsp;universitario: orientamento&nbsp;e&nbsp;FAQ.</p>
                 </div>
                 <div class="annoPCTO osservato fadeInH">
                     <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Quinto anno</p>
-                    <p>Etica delle nuove tecnologie: le intelligenze<br>artificiali e i deep fake.</p>
+                    <p>Etica delle nuove tecnologie: le intelligenze artificiali&nbsp;e&nbsp;i&nbsp;deep&nbsp;fake.</p>
                 </div>
             </div>
             <div id="relazioneFinalePCTO">
@@ -179,7 +179,7 @@
 
     <section id="materie_Page" style="height: 1000px; padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH titoloSezione">Navigare nell'ignoto</p>
-        <p class="osservato fadeInH sottotitoloSezione">l'essere umano e la sua capacità di adattamento</p> <!-- concetto al posto di tema? -->
+        <p class="osservato fadeInH sottotitoloSezione">l'essere umano e la sua capacità di&nbsp;adattamento</p>
         
     </section>
         
