--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <ul>
             <li><a id="home" class="active" onclick="goTo(id)">Home</a></li><!--
             --><li><a id="educazione_civica" onclick="goTo(id)">Educazione civica</a></li><!--
-            --><li><a id="pcto" onclick="goTo(id)">Pcto</a><!--
-            --><li><a id="materie"  onclick="goTo(id)">Materie</a>
+            --><li><a id="pcto" onclick="goTo(id)">Pcto</a>
             </li>
         </ul>
     </nav>
@@ -174,12 +173,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section id="materie_Page" style="height: 1000px; padding-top: calc(45px + 1vw);">
-        <p class="osservato fadeInH titoloSezione">Navigare nell'ignoto</p>
-        <p class="osservato fadeInH sottotitoloSezione">l'essere umano e la sua capacità di&nbsp;adattamento</p>
-        
     </section>
     
     <script src="javascript/navbar.js"></script>
