--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- evita modalità dark del sito -->
+    <meta name="color-scheme" content="only light">
     
     <!-- favicon per i vari dispositivi (anche icone sito aggiunto a desktop) -->
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
