Risoluzione bug altezza home su mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <section class="schermataPrincipale">
-        <div id="home_Page" style="height: 100vh; display: flex; flex-flow: column;">
+        <div id="home_Page" style="height: 100dvh; display: flex; flex-flow: column;">
             <div id="homeSection">
                 <p class="testoHome osservato fadeInH" style="font-size: calc(15px + 4vw); font-weight: bold;">Esame di Stato 2022/2023</p>
                 <p class="testoHome osservato fadeInH" style="font-size: calc(13px + 3.5vw);">Ciotola Emanuele</p>
@@ -140,7 +140,7 @@
         </div>
     </section>
 
-    <section id="pcto_Page" style="background-color: #EDE8DD; padding-top: calc(45px + 1vw); color: #040405;">
+    <section id="pcto_Page" style="background-color: #EDE8DD; color: #040405; padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH titoloSezione">PCTO</p>
         <p class="osservato fadeInH sottotitoloSezione">percorsi per le competenze trasversali e&nbsp;l'orientamento</p>
         <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 10px;">
