--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <section class="schermataPrincipale">
-        <div id="home_Page" style="height: 100dvh; display: flex; flex-flow: column;">
+        <div id="home_Page" style="height: 100vh; display: flex; flex-flow: column;">
             <div id="homeSection">
                 <p class="testoHome osservato fadeInH" style="font-size: calc(15px + 4vw); font-weight: bold;">Esame di Stato 2022/2023</p>
                 <p class="testoHome osservato fadeInH" style="font-size: calc(13px + 3.5vw);">Ciotola Emanuele</p>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div id="fotoRicordi">
-            <img src="Assets/images/FotoRicordi.svg" width="100%" oncontextmenu="return false;" draggable="false" style="display: block; padding: 0 2vw 0 2vw;">
+            <img src="Assets/images/FotoRicordi.svg" width="100%" draggable="false" style="display: block; padding: 0 2vw 0 2vw; pointer-events: none;">
         </div>
     </section>
 
