--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- inserimento sito in risultati ricerca google -->
+    <meta name="google-site-verification" content="W4m6-Cg3xkpEOSg0rzPIgE6C3gl7yw95aOWXSdd87gM" />
+
     <!-- evita modalità dark del sito -->
     <meta name="color-scheme" content="only light">
     
@@ -178,7 +181,7 @@
         </div>
     </section>
     
-    <script src="javascript/navbar.js"></script>
-    <script src="javascript/main.js"></script>
+    <script src="Javascript/navbar.js"></script>
+    <script src="Javascript/main.js"></script>
 </body>
 </html>
