--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
     </section>
     
-    <script src="/Javascript/navbar.js"></script>
-    <script src="/Javascript/main.js"></script>
+    <script src="Javascript/navbar.js"></script>
+    <script src="Javascript/main.js"></script>
 </body>
 </html>
