--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div id="fotoRicordi">
-            <img src="Assets/images/FotoRicordi.svg" width="100%" draggable="false" style="display: block; padding: 0 2vw 0 2vw; pointer-events: none;">
+            <img src="Assets/images/FotoRicordi.jpg" width="100%" draggable="false" style="display: block; padding: 0 2vw 0 2vw; pointer-events: none;">
         </div>
     </section>
 
