--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="color-scheme" content="only light">
     
     <!-- favicon per i vari dispositivi (anche icone sito aggiunto a desktop) -->
+    <link rel="shortcut icon" href="#">
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
@@ -21,7 +22,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="style.css">
-    <title>Esame di stato</title>
+    <title>Esame di Stato 2022/2023 - Ciotola Emanuele</title>
+    <meta name="description" content="Sito realizzato per l'Esame di Stato di Ciotola Emanuele. Vengono qui esposti gli elaborati di Educazione Civica e PCTO risultanti dalla conclusione del percorso scolastico.">
 </head>
 <body>
     <nav id="menu">
@@ -74,7 +76,7 @@
                     <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">I ragazzi di<br>via Panisperna</p>  
                 </div>
                 <div style="flex: 1.5;">
-                    <p>"Ragazzi di via Panispena" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico dei reattori e delle bombe nucleari. Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università, sia per la diversa ideologia dei membri del gruppo rispetto al regime fascista. Alcuni andarono negli Stati Uniti per il progetto Manhattan, altri in Inghilterra. L'unico scienziato di cui si persero le tracce fu Ettore Majorana. La sua scomparsa venne tratta da Leonardo Sciascia nel saggio «La scomparsa di Majorana». L'autore raccolse qui le notizie frammentarie sul fatto e le dichiarazioni di persone vicine a Majorana, rielaborandole in maniera personale.</p>
+                    <p>"Ragazzi di via Panisperna" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico dei reattori e delle bombe nucleari. Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università, sia per la diversa ideologia dei membri del gruppo rispetto al regime fascista. Alcuni andarono negli Stati Uniti per il progetto Manhattan, altri in Inghilterra. L'unico scienziato di cui si persero le tracce fu Ettore Majorana. La sua scomparsa venne tratta da Leonardo Sciascia nel saggio «La scomparsa di Majorana». L'autore raccolse qui le notizie frammentarie sul fatto e le dichiarazioni di persone vicine a Majorana, rielaborandole in maniera personale.</p>
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW" style="flex-direction: row-reverse;">
