--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <meta name="color-scheme" content="only light">
     
     <!-- favicon per i vari dispositivi (anche icone sito aggiunto a desktop) -->
-    <link rel="shortcut icon" href="#">
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="Assets/images/favicon/favicon-32x32.png">
+    <link rel="shortcut icon" href="Assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="Assets/images/favicon/site.webmanifest">
     <link rel="mask-icon" href="Assets/images/favicon/safari-pinned-tab.svg" color="#ede8dd">
     <meta name="msapplication-TileColor" content="#ede8dd">
