--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     
     <!-- favicon per i vari dispositivi (anche icone sito aggiunto a desktop) -->
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="Assets/images/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="Assets/images/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="150x150" href="Assets/images/favicon/mstile-150x150.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
     <link rel="shortcut icon" href="Assets/images/favicon/favicon-32x32.png">
