--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     
     <!-- favicon per i vari dispositivi (anche icone sito aggiunto a desktop) -->
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="Assets/images/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Assets/images/favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="150x150" href="Assets/images/favicon/mstile-150x150.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="194x194" href="Assets/images/favicon/favicon-194x194.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="Assets/images/favicon/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="Assets/images/favicon/favicon-32x32.png">
-    <link rel="shortcut icon" href="Assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="Assets/images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="Assets/images/favicon/safari-pinned-tab.svg" color="#ede8dd">
+    <link rel="mask-icon" href="Assets/images/favicon/safari-pinned-tab.svg" color="#040405">
+    <link rel="shortcut icon" href="Assets/images/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#ede8dd">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileImage" content="Assets/images/favicon/mstile-144x144.png">
+    <meta name="msapplication-config" content="Assets/images/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ede8dd">
 
     <link rel="stylesheet" href="style.css">
     <title>Esame di Stato 2022/2023 - Ciotola Emanuele</title>
